--- a/final-project/styles/large.css
+++ b/final-project/styles/large.css
@@ -67,7 +67,7 @@
     }
 
 
-    #application {
+    #application,  #brazil-card {
 
         display: grid;
         grid-template-columns: 1fr 1fr;
