Images and CSS adjustments

--- a/final-project/styles/small.css
+++ b/final-project/styles/small.css
@@ -88,7 +88,13 @@ h2
 {
     color: #263D92;
 }
-
+#message {
+    color: #263D92;
+    text-align: center;
+    margin: 15px;
+    font-size: 1.2rem;
+    font-weight: bold;
+}
 select {
     width: 200px;
     padding: 10px;
@@ -96,7 +102,7 @@ select {
     border-radius: 4px;
     background-color: #f9f9f9;
     font-size: 16px;
-    color: #184E2C;
+    color: #263D92;
     margin: 10px;
 }
 
@@ -111,7 +117,7 @@ select:focus {
 option {
     padding: 10px;
     background-color: #fff;
-    color: #184E2C;
+    color: #263D92;
 }
 
 
@@ -201,7 +207,7 @@ nav {
     font-size: 2rem;
     background: none;
     border: none;
-    color: #002776;
+    color: #ffffff;
     cursor: pointer;
     width: 100%;
     text-align: right;
@@ -246,98 +252,6 @@ nav.open {
 #animateme a:hover {
     color: #002776;
     background-color: #ffffff;
-}
-
-/*FORM STUFF*/
-form {
-    margin: 1rem 2%;
-}
-
-form label {
-    display: block;
-    font-size: .8rem;
-    color: black;
-    padding-top: .2rem;
-}
-
-form h3 {
-    font-size: .9rem;
-    margin: 1.5rem 0 .2rem 0;
-    border-bottom: 1px solid #eee;
-}
-
-form input[type=text],
-form input[type=tel],
-form input[type=date],
-form input[type=email],
-form select {
-    display: block;
-    margin: .1rem 0 1rem 0;
-    padding: .3rem;
-    border: 1px solid #999;
-    border-radius: 4px;
-    border-left-width: 5px;
-    border-left-color: #555;
-    font-size: 1rem;
-    color: #3D405B;
-    width: 250px;
-}
-
-form input:required {
-    border-left-color: #d70000;
-}
-
-form input:focus {
-    border-left-color: black;
-    outline: none;
-}
-
-form input:required:valid {
-    border-left-color: green;
-}
-
-form input[type=submit] {
-    border: none;
-    text-align: center;
-    background-color: #002776;
-    color: white;
-    border-radius: 1rem;
-    padding: .75rem 1.5rem;
-    margin: 2rem 0;
-    font-size: 1.2rem;
-    -webkit-appearance: none;
-    appearance: none;
-    cursor: pointer;
-}
-
-form input[type=radio] {
-    margin: 10px;
-    padding: 5px;
-}
-
-form input[type=submit]:hover {
-    background-color: #555;
-}
-
-form textarea {
-    background-color: #eee;
-    display: block;
-    border: solid 1px #999;
-    border-radius: 6px;
-    padding: .75rem;
-    color: #555;
-    width: 100%;
-    max-width: 400px;
-    appearance: none;
-    white-space: normal;
-    text-align: justify;
-    -moz-text-align-last: center;
-    /* Firefox 12+ */
-    text-align-last: center;
-}
-
-form input:-webkit-autofill {
-    -webkit-text-fill-color: #3D405B;
 }
 
 button {
@@ -406,7 +320,7 @@ body {
 
 picture img {
     vertical-align: middle;
-    max-width: 800px;
+    max-width: 100%;
     height: auto;
 }
 
